(fix) Prevents scrolling to offscreen share card

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -274,13 +274,15 @@ form {
 }
 
 .share-card-container {
-  position: absolute;
+  position: fixed;
   top: 100%;
   height: 100%;
   width: 100%;
   -webkit-transition: all 1s;
-          transition: all 1s;}
+          transition: all 1s;
+}
 
 .show-share-card {
   top: 0px;
+
 }
